added single select, ctrl select and shift select on file list

--- a/lib/css/rinobot.scss
+++ b/lib/css/rinobot.scss
@@ -25,6 +25,10 @@ h1, h2, h3, h4, h5, h6{
   font-family: $font-family;
 }
 
+table:focus{
+  outline:none;
+}
+
 .container {
   height: 100%;
 }
@@ -161,6 +165,10 @@ h1, h2, h3, h4, h5, h6{
   color: #fff;
   border-color: #808FBF;
   z-index: 1;
+}
+
+.sidebar .fa {
+  width: 20px;
 }
 
 /*
@@ -592,4 +600,9 @@ span.block-title{
   background-color: $panel-heading-color;
   font-weight: 300;
   font-size: 0.8em;
+}
+
+li, tr {
+  user-select: none;
+  -webkit-user-select: none;
 }
