--- a/lib/css/rinobot.scss
+++ b/lib/css/rinobot.scss
@@ -268,6 +268,18 @@ table:focus{
   text-decoration: underline;
 }
 
+.btn-signup{
+  background-color: $primary-color;
+}
+.btn-signup:hover{
+  color: #2595ff;
+}
+.btn-signup:focus{
+  color: #fafafa;
+  text-decoration: underline;
+}
+
+
 .btn-start {
   border-color: #49925d;
   background-color: #80BF91;
