--- a/lib/css/variables.scss
+++ b/lib/css/variables.scss
@@ -8,5 +8,6 @@ $panel-heading-color: #eef1f8;
 $panel-border-color: #dae1eb;
 $panel-body-color: $grey1;
 
+$sidebar-color: #647997;
 $font-family: 'Karla', sans-serif;
 $sidebar-width: 200px;
