--- a/lib/css/rinobot.scss
+++ b/lib/css/rinobot.scss
@@ -122,7 +122,7 @@ table:focus{
   bottom: 0;
   left: 0;
   width: $sidebar-width;
-  background-color: $primary-color;
+  background-color: $sidebar-color;
   padding: 40px 0px;
 }
 
@@ -141,8 +141,17 @@ table:focus{
   text-decoration:none;
 }
 
-.sidebar .list-group-item:hover{
-  background-color: $primary-dark;
+.sidebar .list-group-item:hover,
+.sidebar .list-group-item:focus,
+.sidebar .list-group-item:visited{
+  background-color: inherit;;
+  color: #fff;
+}
+
+.sidebar .active:hover,
+.sidebar .active:focus,
+.sidebar .active:visited{
+  background-color: inherit;;
   color: #fff;
 }
 
@@ -157,15 +166,14 @@ table:focus{
 
 .sidebar a.list-group-item:focus{
   text-decoration: none;
-  background-color: $primary-dark;
+  background-color: inherit;;
   color: #fff;
 }
 
 .sidebar .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
   z-index: 2;
-  background-color: #E1E4EF;
+  background-color: inherit;
   color: $primary-color;
-  background-color: $primary-dark;
   color: #fff;
   border-color: #808FBF;
   z-index: 1;
@@ -606,7 +614,7 @@ $grey-line-color: rgba(100,100,100,0.2);
 }
 
 .active {
-  background-color: #e6e6e6;
+  background-color: rgba(236, 236, 236, 0.72);
 }
 
 .table > tbody > tr.active > td{
@@ -685,20 +693,71 @@ a:focus, a:active:focus, a.active:focus, a.focus, a:active.focus, a.active.focus
   border-color: #eee;
 }
 
-.fs-row{
-  padding: 10px 0px;
-  margin: 0px 5px;
-  border-top: 1px solid rgba(162, 162, 162, 0.2);
-}
-
-.fs-row:first-child{
-  border-top: none;
-}
-
 pre.item-log{
   font-size: 0.8em;
   border: none;
   background-color: inherit;
   padding: 0;
   margin: 0;
+}
+
+.metadata-shelf{
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  background-color: $panel-body-color;
+  z-index: 100;
+  width: 50%;
+}
+
+.metadata-shelf .panel{
+  height: 100%;
+  background-color: $panel-body-color;
+  margin-bottom: 0px;
+}
+
+.metadata-shelf .panel-primary{
+  border-radius: 0px;
+  border-top: none;
+  border-bottom: none;
+}
+
+.fs-table{
+  margin-right: -5px;
+  margin-left: -5px;
+}
+
+.fs-table a{
+  color: #6c6f73;
+}
+
+.fs-row{
+  border-top: 1px solid rgba(162, 162, 162, 0.2);
+  margin-bottom: -1px;
+}
+
+.fs-row:last-child{
+  border-bottom: 1px solid rgba(162, 162, 162, 0.2);
+  margin-bottom: -1px;
+}
+
+.fs-row:last-child .p-a-sm:last-child{
+  padding: 7px;
+}
+
+.fs-row .btn-table-item{
+  border-radius: 2px;
+  color: #868ea3;
+  border-color: #dae1eb;
+  background-color: $panel-body-color;
+  float: left;
+  min-width: 3%;
+  border: none;
+  border-right: 1px solid #eee;
+  border-radius: 0!important;
+}
+
+.p-a-sm{
+  padding: 8px;
 }
